// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Merge Nothing 1`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`Merge Nothing 2`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`Merge One way delCell 1`] = `
[
  419545430,
  419545430,
  2038672141,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delRow 1`] = `
[
  1131541991,
  1131541991,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delTable 1`] = `
[
  3830531581,
  3830531581,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delTables 1`] = `
[
  1487413994,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way delValue 1`] = `
[
  707374129,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  1921093339,
  1209068807,
]
`;

exports[`Merge One way delValues 1`] = `
[
  1705173194,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  1024115232,
  4067122285,
]
`;

exports[`Merge One way setCell 1`] = `
[
  957968817,
  957968817,
  2815901277,
  1148302086,
  3207404266,
  2614692414,
  0,
  0,
]
`;

exports[`Merge One way setCell 2 1`] = `
[
  1483802621,
  1483802621,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  0,
  0,
]
`;

exports[`Merge One way setTables 1`] = `
[
  3987637125,
  3987637125,
  374710841,
  2272266658,
  2614692414,
  2614692414,
  0,
  0,
]
`;

exports[`Merge One way setValue 1`] = `
[
  720888881,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  1918879451,
  1209068807,
]
`;

exports[`Merge One way setValues 1`] = `
[
  3978421055,
  1487413994,
  1958915000,
  1802329738,
  1646436633,
  1517672885,
  3045704149,
  1524959021,
]
`;

exports[`Merge Two way Conflict 1`] = `
[
  1335458839,
  4033596827,
  1293085726,
  1279994494,
  4065945599,
  0,
  3220353420,
  3207404266,
]
`;

exports[`Merge Two way Conflict 2`] = `
[
  4215415104,
  2754557355,
  3649130009,
  4004729339,
  2804922642,
  0,
  1600984299,
  2724740231,
]
`;

exports[`Merge Two way Conflict 3`] = `
[
  3422332079,
  2754557355,
  3649130009,
  4004729339,
  2804922642,
  0,
  1876136196,
  2724740231,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 1`] = `
[
  2133326328,
  4033596827,
  1293085726,
  1279994494,
  4065945599,
  0,
  2404136035,
  3207404266,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 2`] = `
[
  1434493245,
  2890591112,
  2400251703,
  140652553,
  0,
  2804922642,
  4190784181,
  0,
]
`;

exports[`Merge Two way Mutually exclusive tables & values 3`] = `
[
  3654997970,
  981583737,
  385702800,
  3406116407,
  4065945599,
  2804922642,
  3814396075,
  3207404266,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 1`] = `
[
  3306754367,
  3306754367,
  3488783888,
  2311787809,
  2614692414,
  0,
  0,
  0,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 2`] = `
[
  188771937,
  0,
  0,
  0,
  0,
  0,
  188771937,
  3183766124,
]
`;

exports[`Merge Two way Mutually exclusive tables vs values 3`] = `
[
  3461971806,
  3306754367,
  3488783888,
  2311787809,
  2614692414,
  0,
  188771937,
  3183766124,
]
`;

exports[`getMergeableContent Empty transaction 1`] = `
[
  0,
  0,
  0,
  0,
  0,
  0,
  0,
  0,
]
`;

exports[`getMergeableContent Mutate 1`] = `
[
  839565294,
  3830531581,
  3435653238,
  284112242,
  3207404266,
  1517672885,
  3596352019,
  3265694938,
]
`;

exports[`getMergeableContent Set in sequence 1`] = `
[
  171405368,
  3257932459,
  3331060598,
  4220223298,
  2614692414,
  3207404266,
  3355929235,
  4189032886,
]
`;

exports[`getMergeableContent Set together 1`] = `
[
  32757013,
  2620828010,
  1539544661,
  1474233545,
  2614692414,
  4065945599,
  2646965375,
  4060269138,
]
`;
